kustomize-incomplete/expenseowl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expenseowl
  namespace: expenseowl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expenseowl
  template:
    metadata:
      labels:
        app: expenseowl
    spec:
      containers:
      - name: expenseowl
        image: tanq16/expenseowl:main
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: expenseowl-storage
          mountPath: /app/data
      volumes:
      - name: expenseowl-storage
        persistentVolumeClaim:
          claimName: expenseowl-data
