kustomize-incomplete/expenseowl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expenseowl
  namespace: expenseowl
spec:
  selector:
    app: expenseowl
  ports:
  - name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
