kustomize-incomplete/expenseowl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expenseowl
  namespace: expenseowl
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
      #    traefik.ingress.kubernetes.io/router.middlewares: expenseowl-basic-auth@kubernetescrd
spec:
  rules:
  - host: expenseowl.stillon.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: expenseowl
            port:
              number: 80
  tls:
  - hosts:
    - expenseowl.stillon.top
    secretName: expenseowl-tls
